foundry-server/foundry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foundry-server
  name: foundry-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundry
  strategy:
    type: Recreate # This makes sure only one instance is running at a time
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundry
          image: felddy/foundryvtt:12.328.0
          ports:
            - containerPort: 30000
              name: http
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: foundry-data-pvc
