foundry-server/foundry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry-svc
  namespace: foundry-server
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: foundry
