foundry-server/foundry/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: foundry-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: foundry.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foundry-svc
            port:
              name: https
  tls:
  - hosts:
    - foundry.wavecat.net
    secretName: foundry.wavecat.net
